# twirl

./: .committed.toml  .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  .rumdl.toml  .typos.toml  CHANGELOG.md  Cargo.toml  pyproject.toml  release-please-config.json
.github/workflows/: CD.yml  CI.yml  Lint.yml  Release.yml  Version.yml
crates/loom-core/: Cargo.toml
crates/loom-core/src/: errors.rs  lib.rs  source.rs  symbols.rs
crates/squirrel/: CHANGELOG.md  Cargo.toml
crates/squirrel/src/: lib.rs
doc/hello/: hello.cc  hello.jl  hello.py  hello.rs
python/loom/: __init__.py
python/pearl/: __init__.py
src/: extensions.rs  languages.rs  lib.rs  py03.rs  syntax.rs
test/: test_extensions.py
tests/: python.rs
tests/parsers/: test_python.rs
tests/py03/: test_extensions.py  test_imports.py
tests/python/: test_extensions.py  test_imports.py
xtask/: Cargo.toml
xtask/src/: main.rs
