[workspace]
resolver = "3"
members = [".", "crates/squirrel"]

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
pyo3 = "0.27.0"
arborium = "2.12.4"
lsp-types = "0.97.0"

[package]
name = "twirl"
version = "0.0.3"
edition = "2024"
license = "GPL-2.0-only"

[lib]
name = "twirl"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
squirrel = { path = "crates/squirrel", version = "0.0.0" }
